03-gitops/components/03-observability/victoria-metrics-server/vm-server-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-server-route
  namespace: observability
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: gateway-system
  hostnames:
    - victoria-metrics.serhii.link
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: victoria-metrics-server
          port: 8428
          weight: 1
